# acqu

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  ReleaseDetails  UsersGuide
CaLib/: CMakeLists.txt  rootlogon.C
CaLib/config/: 2014-10.cfg  2014-10_TAPSPed.cfg  2014-12.cfg  2014_07.cfg  2015-06.cfg  config_blaster_example.cfg  config_example.cfg
CaLib/include/: LinkDef.h  TCCalib.h  TCCalibEnergy.h  TCCalibPed.h  TCCalibTime.h  TCMySQLManager.h  TCReadACQU.h  TIndicatorLine.h
CaLib/macros/: AddBeamtime.C  AddRuns.C  ApplyCalibFromAR.C  CalibrateGUI.C  FlipTDCGainTAPS.sh  PlotCBGains.C  PlotInvariantMassPositions.C
CaLib/macros/check/: CBEnergy.C  CBTime.C
CaLib/macros/runsets/: BrowseHistograms.C  CBEnergy.C  CBTime.C  Config.h  FindAnomalies.C  PIDEnergy.C  PIDTime.C  TAPSEnergy.C  TAPSTime.C
CaLib/src/: TCCalib.cxx  TCCalibCBTimeWalk.cxx  TCCalibData.cxx  TCCalibDiscrThr.cxx  TCCalibEnergy.cxx  TCCalibPIDDroop.cxx  TCCalibPIDEnergy.cxx  TCCalibPIDEnergyTrad.cxx  TCCalibPIDPhi.cxx  TCCalibPed.cxx  TCCalibQuadEnergy.cxx  TCCalibTAPSEnergySG.cxx  TCCalibTAPSPSA.cxx  TCCalibTargetPosition.cxx  TCCalibTime.cxx  TCCalibType.cxx  TCCalibVetoCorr.cxx  TCCalibVetoEnergy.cxx  TCContainer.cxx  TCFileManager.cxx  TCFitTools.cxx  TCMySQLManager.cxx  TCReadACQU.cxx  TCReadARCalib.cxx  TCReadConfig.cxx  TCWriteARCalib.cxx  TIndicatorLine.cxx
Tools/: CMakeLists.txt
Tools/OSCAR/: CMakeLists.txt  README
Tools/OSCAR/A2/include/: TOA2DetParticle.h  TOA2Detector.h  TOA2PSA.h  TOA2RecMeson2g.h
Tools/OSCAR/A2/src/: TOA2DetParticle.cxx  TOA2Detector.cxx  TOA2RecParticle.cxx
Tools/OSCAR/MC/include/: TOMCParticle.h
Tools/OSCAR/main/include/: LinkDef.h  TOGlobals.h  TOVersion.h
Tools/OSCAR/main/src/: MainOSCARConfig.cxx  TOGlobals.cxx
Tools/OSCAR/utils/include/: TOASCIIReader.h  TOKinCut.h  TONumberReader.h  TOSUtils.h
Tools/OSCAR/utils/src/: TOKinCut.cxx  TOSUtils.cxx
Tools/Worker/: CMakeLists.txt
Tools/Worker/src/: Worker.cc
Tools/a2display/: CMakeLists.txt  Doxyfile.in  README.md
Tools/a2display/examples/: Polling.C  PollingInAcqu.C  a2display_example.cpp  cb1.C  cb_hitpatterns.C
Tools/a2display/inc/: CanvasTool.h  LinkDef.h  PollingHist.h  TH2CB.h  TH2DrawTool.h  TH2TAPS.h  a2display.h  matrixstack.h
Tools/a2display/src/: CanvasTool.cpp  PollingHist.cpp  TH2CB.cpp  TH2DrawTool.cpp  TH2TAPS.cpp  a2display.cpp  matrixstack.cpp
acqu_core/: CMakeLists.txt  Release.Notes
acqu_core/AcquDAQ/: .gitignore
acqu_core/AcquDAQ/data/: taps-vme-1
acqu_core/AcquDAQ/data/_CAMAC/: caen208.CB0  caen208.CB0_2  caen208.CB1  caen208.CB2  caen208.CB2.PIDalone  caen208.CB3  caen208.CB3.he3  caen208.CB3.orig  caen208.CB34  caen208.CB3_2  caen208.CB4  caen208.CB5  caen208.CB7  caen208.CB_TrigLevel  caen208.CB_TrigLevel.bak  caen208.CB_TrigLevel.orig  caen208.CBall  caen208.CBnull  caen208.CBpbglass  caen208.CBpulser  caen208.micro  caen_208.CB_TrigLevel  caen_208.CBsumSAVEDBAYAApril2012  caen_208.trig  dphn_pu48_1r.d  gsisc4800.d  lrs4300b_old.d  lrs_2228.d  lrs_2249a_pair.d  lrs_2249gdh.d  lrs_2249w.PbGlass  lrs_2249w.d  lrs_2249w.test  lrs_2249w_st17.cb  lrs_2259.nai  lrs_2323.CBtrig  lrs_2323.d  lrs_2341a.d  lrs_2373.d  lrs_2551.d  (+37 more)
acqu_core/AcquDAQ/data/_FASTBUS/: lrs_1875a-baya.d  lrs_1875a.d  lrs_1885.d  lrs_1885l.adc2200  lrs_1885l.adc2200.org  phil_10c.maxwind  phil_10c6.tagg  smi_0.d  smi_2.d  smi_3.d  str_136.ped  str_200.d  str_200_clr.d
acqu_core/AcquDAQ/data/_FPGA/: catch-2003_7.hex  loadXilinx  loadi2c  reference-v3.f1  reference-v4.f1  reference-v4_lat10000.f1  reference-v4_lat10000_tr.f1  reference-v4_lat20k_win20k.f1-savedmar3rdbayapatrik  reference-v4_lat7k_win7k.f1  reference-v4_win20000.f1  sg_hl25c.rbt  sg_mr70.rbt  sg_vme32.rbt  tcs_rec108.hex  tcs_rec108.rbt  tcs_rec201.hex
acqu_core/AcquDAQ/data/_VMEbus/: GeSiCA.80mhz  GeSiCA.CB0  GeSiCA.CB1  GeSiCA.SADC0  GeSiCA.SADC1  GeSiCA.WC0  GeSiCA.WC0-4modules  GeSiCA.WC0-paolo  GeSiCA.WC0-standard  GeSiCA.WC0save  GeSiCA.WC1  GeSiCA.WC1-paolo  GeSiCA.WC1-paolo4modules  GeSiCA.WC1-standard  GeSiCA.WC1save  catchScaler.d  catchScaler.d.orig  catchTCS.d  catchTCS.d.orig  catchTDC.d.orig  catchTDC_inverted.d  dsp56_ped.d  dsp56_ped.nullped  (+4 more)
acqu_core/AcquDAQ/macros/: testEpics.C
acqu_core/AcquDAQ/src/: AcquDAQLinkDef.h  DAQMemMap_t.cc  MainAcquDAQ.cc  MainHV.cc  ModuleIndex.h  RSupervise.cc  TCAMAC_2323.cc  TCAMAC_2373.cc  TCAMAC_4413DAQEnable.cc  TCAMAC_4413SPILL.cc  TCAMAC_4508.cc  TCAMAC_GSI4800.cc  TCAMACmodule.cc  TDAQ_KPhI686.cc  TDAQ_KPhI686.h  TDAQ_SY1527.cc  TDAQ_V2718.cc  TDAQcontrol.cc  TDAQexperiment.cc  TDAQexperiment.h  TDAQguiCtrl.cc  TDAQguiCtrl.h  TDAQmodule.cc  TDAQmodule.h  TDAQstore.cc  TDAQsupervise.cc  TDAQsupervise.h  TEPICSmodule.cc  TFB_1821SMI.cc  TFB_LRS1800.cc  TFB_Phil10C.cc  TFB_STR200.cc  TFBmodule.cc  TGUIsupervise.cc  TVME_CATCH.cc  TVME_CATCH.h  TVME_CATCH_Scaler.cc  TVME_CATCH_TCS.cc  TVME_CATCH_TCS.h  TVME_CATCH_TDC.cc  (+30 more)
acqu_core/AcquMC/src/: MainAcquMC.cc  TMCDgpInt.cc  TMCFoamGenerator.cc  TMCFoamInt.cc  TMCFoamParticle.cc  TMCGenerator.cc  TMCGenerator.h  TMCParticle.cc  TMCPhotoPSGenerator.cc  TMCPhotoPSInt.cc  TMCResonance.cc  TMCdS5MDMInt.cc  TMCdS5MDMParticle.cc
acqu_core/AcquRoot/src/: ARFile_t.cc  ARFile_t.h  ARSocket_t.cc  CatchTDC_t.h  EnumConst.h  HitCluster_t.cc  HitCluster_t.h  HitD2A_t.cc  HitD2A_t.h  MCBranchID.h  MainAcquRoot.cc  MultiADC_t.h  TA2Analysis.cc  TA2Analysis.h  TA2Apparatus.cc  TA2BitPattern.cc  TA2ClusterDetector.cc  TA2ClusterDetector.h  TA2Control.cc  TA2Control.h  TA2Cut.cc  TA2CylStrip.cc  TA2CylWire.cc  TA2DataFormat.cc  TA2DataFormat.h  TA2DataManager.cc  TA2DataManager.h  TA2DataServer.cc  TA2DataServer.h  TA2DataSource.cc  TA2DataSource.h  TA2Detector.cc  TA2Detector.h  TA2FileSource.cc  TA2FileSource.h  TA2GenericApparatus.cc  TA2GenericDetector.cc  TA2GenericPhysics.cc  TA2H.cc  TA2H1.cc  (+31 more)
acqu_core/ezcaRoot/src/: ezcaRoot.cc  ezcaRoot.h
acqu_core/scripts/: AcquControl  AcquDAQControl  AcquFarm  AcquHierarchy  AcquManager  AcquNode  AcquSubmit  CheckFarm  MCAcquFarm  MCAcquNode  MCAcquSubmit  TAPSCosmicCalib  daq_status
(+529 files in other folders)
